finish Patient sestion