@@ -1,6 +1,7 @@
 package ma.ensa.sihmoduleadmission.service.appointment;
 
 import lombok.extern.slf4j.Slf4j;
+import ma.ensa.sihmoduleadmission.dto.AppointmentDTO;
 import ma.ensa.sihmoduleadmission.dto.PatientDTO;
 import ma.ensa.sihmoduleadmission.entities.Appointment;
 import ma.ensa.sihmoduleadmission.entities.Patient;
@@ -11,12 +12,15 @@ import ma.ensa.sihmoduleadmission.mapper.SIHMapper;
 import ma.ensa.sihmoduleadmission.repos.AppointmentRepo;
 import ma.ensa.sihmoduleadmission.service.patient.PatientServicesImpl;
 import ma.ensa.sihmoduleadmission.service.planification.PlanificationServicesImpl;
+import ma.ensa.sihmoduleadmission.service.sendemail.EmailSende;
 import ma.ensa.sihmoduleadmission.service.speciality.SpecialtyServicesImpl;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.util.Date;
 import java.util.List;
+import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 @Transactional
@@ -29,7 +33,8 @@ public class AppointmentServiceImpl implements AppointmentService {
     private SpecialtyServicesImpl specialtyServices;
     private PlanificationServicesImpl planificationServices;
     private SIHMapper sihMapper;
-    public AppointmentServiceImpl(AppointmentRepo appointmentRepo, SpecialtyServicesImpl specialtyServices, PlanificationServicesImpl planificationServices, SpecialtyServicesImpl specialtyServicesImpl, PlanificationServicesImpl planificationServicesImpl, PatientServicesImpl patientServicesImpl, SIHMapper sihMapper) {
+    private  EmailSende emailSende;
+    public AppointmentServiceImpl(AppointmentRepo appointmentRepo, SpecialtyServicesImpl specialtyServices, PlanificationServicesImpl planificationServices, SpecialtyServicesImpl specialtyServicesImpl, PlanificationServicesImpl planificationServicesImpl, PatientServicesImpl patientServicesImpl, SIHMapper sihMapper, EmailSende emailSende) {
         this.appointmentRepo = appointmentRepo;
         this.specialtyServices = specialtyServices;
         this.planificationServices = planificationServices;
@@ -37,6 +42,7 @@ public class AppointmentServiceImpl implements AppointmentService {
         this.planificationServicesImpl = planificationServicesImpl;
         this.patientServicesImpl = patientServicesImpl;
         this.sihMapper = sihMapper;
+        this.emailSende = emailSende;
     }
 
     @Override
@@ -49,14 +55,18 @@ public class AppointmentServiceImpl implements AppointmentService {
     public Appointment save(String SpecialityName , String PatientId) {
         Specialty specialty = specialtyServicesImpl.findbyname(SpecialityName);
 // Fetch available planifications for the given specialty
-        Planification planifications = planificationServicesImpl.findAvailable(specialty);
+        List<Planification> planifications = planificationServicesImpl.findavalabel(specialty);
+// Check if planifications list is empty
+        if (planifications.isEmpty()) {
+            throw new ApiRequestExpetion("No available planifications for the selected specialty.");
+        }
 // Create a new appointment
         Appointment appointment = new Appointment();
         appointment.setAnnule(false);
         appointment.setSpecialty(specialty);
         appointment.setIspasse(false);
-        appointment.setDateofRDV(planifications.getDate());
-        appointment.setDoctor(planifications.getDoctors().getFirst());
+        appointment.setDateofRDV(planifications.get(0).getDate());
+        appointment.setDoctor(planifications.get(0).getDoctors().get(0));
 
 // Fetch patient by ID
         Patient patient = patientServicesImpl.findbyid(PatientId);
@@ -64,10 +74,16 @@ public class AppointmentServiceImpl implements AppointmentService {
         if (patient == null) {
             throw new ApiRequestExpetion("Patient with ID "+PatientId+ " does not exist.");
         }
-        this.DidPatientAlreadyTakeAppointment(specialty,planifications.getDate(),patient );
+        this.DidPatientAlreadyTakeAppointment(specialty,planifications.get(0).getDate(),patient);
         appointment.setPatient(patient);
 // Save the appointment
         Appointment appointment1 = appointmentRepo.save(appointment);
+        planifications.get(0).setCurrentcapacity(planifications.get(0).getCurrentcapacity()+1);
+        String to = patient.getMail();
+        String subject = "Appointment Confirmation";
+        String body = "Your appointment has been successfully scheduled at the "+planifications.get(0).getDate() +" in " +
+                "the "+specialty.getSpecialtyName() ;
+        emailSende.setJavaMailSender(to, subject, body);
         return appointment1;
     }
 
@@ -76,7 +92,23 @@ public class AppointmentServiceImpl implements AppointmentService {
         Patient existingPatient = appointmentRepo.findPatient(specialty, date, patient);
         if (existingPatient != null) {
             throw new ApiRequestExpetion("Patient"+patient.getCNE()+
-                    "already has an appointement in"+date+"in this speciality");
+                    "already has an appointement in "+date+" in this speciality");
         }
+    }
+
+    @Override
+    public List<AppointmentDTO> PatiemtAppointmeent(String id) {
+        Patient patient = patientServicesImpl.findbyid(id);
+        List<Appointment> appointments = appointmentRepo.findAppointmentByPatientAndAndDateofRDVAfter(patient, new Date());
+        List<AppointmentDTO> appointmentDTOS = appointments.stream().map
+                        (appointment -> sihMapper.AppointmentToDTOAppointment(appointment))
+                .collect(Collectors.toList());
+        return appointmentDTOS ;
+    }
+
+    @Override
+    public void deleteappointement(Long id) {
+        Appointment byId = appointmentRepo.findById(id).orElseThrow( ()-> new ApiRequestExpetion("Appointment not existe"));
+        appointmentRepo.deleteById(id);
     }
 }
